# cubiomes

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  biomenoise.c  biomenoise.h  biomes.c  biomes.h  build.gradle  finders.c  finders.h  generator.c  generator.h  gradle.properties  includes.txt  makefile  noise.c  noise.h  piece.h  rng.h  settings.gradle  terrainnoise.c  terrainnoise.h  test_loot.c  util.c  util.h  xradv.c  xrms.h
.github/workflows/: compile-and-create-java-bindings.yml  compile.yml
buildSrc/src/main/java/com/github/cubiomes/buildscript/: CreateJavaBindingsTask.java
buildSrc/src/main/java/dev/xpple/cubiomes/buildscript/: CreateJavaBindingsTask.java
docs/: ExampleClientMixin.java  MultiNoiseBiomeSourceMixin.java  NPTreeC.java  nptree_bin.py
features/: mineshaft.c  mineshaft.h  ocean_ruin.c  ocean_ruin.h  piece.h  stronghold.c  stronghold.h
loot/: desert_temple.h  items.c  items.h  logging.h  loot_functions.c  loot_functions.h  loot_library.h  loot_table_context.c  loot_table_context.h  loot_table_parser.c  loot_table_parser.h  loot_tables.c  loot_tables.h  mc_loot.h  ruined_portal.h
loot/cjson/: cJSON.c  cJSON.h
loot/loot_tables/: bastion_bridge_1_16_1.c  bastion_bridge_1_16_1.h  bastion_bridge_1_16_5.c  bastion_bridge_1_16_5.h  bastion_bridge_1_20.c  bastion_bridge_1_20.h  bastion_other_1_16_1.c  bastion_other_1_16_1.h  bastion_other_1_16_5.c  bastion_other_1_16_5.h  bastion_other_1_20.c  bastion_other_1_20.h  bastion_other_1_21_1.c  bastion_other_1_21_1.h  bastion_other_1_21_9.c  bastion_other_1_21_9.h  buried_treasure_1_13.c  buried_treasure_1_13.h  buried_treasure_1_18.c  buried_treasure_1_18.h  buried_treasure_1_21_11.c  buried_treasure_1_21_11.h  desert_pyramid.json  desert_pyramid_1_13.c  desert_pyramid_1_13.h  desert_pyramid_1_20.c  desert_pyramid_1_20.h  desert_pyramid_1_21_11.c  desert_pyramid_1_21_11.h  desert_pyramid_1_21_6.c  desert_pyramid_1_21_6.h  desert_pyramid_1_21_9.c  desert_pyramid_1_21_9.h  end_city_treasure.json  end_city_treasure_1_13.c  end_city_treasure_1_13.h  end_city_treasure_1_20.c  end_city_treasure_1_20.h  end_city_treasure_1_21_11.c  end_city_treasure_1_21_11.h  (+92 more)
src/main/java/com/github/cubiomes/: BiomeFilter.java  BiomeNoise.java  BiomeNoiseBeta.java  BiomeTree.java  BlendedNoise.java  CanyonCarverConfig.java  CaveCarverConfig.java  Cubiomes.java  CubiomesInit.java  DoublePerlinNoise.java  EnchantInstance.java  EndIsland.java  EndNoise.java  FixSpline.java  Generator.java  ItemStack.java  Layer.java  LayerStack.java  LootFunction.java  LootPool.java  LootTableContext.java  LootTableOutput.java  NetherNoise.java  OctaveNoise.java  OreConfig.java  OreVeinConfig.java  OreVeinParameters.java  PerlinNoise.java  Piece.java  Pos.java  Pos3.java  Pos3List.java  RandomSource.java  Range.java  RollCountFunction.java  SeaLevelColumnNoiseBeta.java  Spline.java  SplineStack.java  StrongholdIter.java  StructureConfig.java  (+11 more)
src/main/java/dev/xpple/cubiomes/: BiomeFilter.java  BiomeNoise.java  BiomeNoiseBeta.java  BiomeTree.java  BlendedNoise.java  CanyonCarverConfig.java  CaveCarverConfig.java  Cubiomes.java  CubiomesInit.java  Cubiomes_1.java  DoublePerlinNoise.java  EnchantInstance.java  EndIsland.java  EndNoise.java  FixSpline.java  Generator.java  ItemStack.java  Layer.java  LayerStack.java  LootFunction.java  LootPool.java  LootTableContext.java  LootTableOutput.java  MobEffect.java  MobEffectEntry.java  MobEffectInstance.java  NetherNoise.java  OctaveNoise.java  OreConfig.java  OreVeinConfig.java  OreVeinParameters.java  PerlinNoise.java  Piece.java  Pos.java  Pos3.java  Pos3List.java  RandomSource.java  Range.java  RollCountFunction.java  SeaLevelColumnNoiseBeta.java  (+15 more)
src/test/java/com/github/cubiomes/: CarverTests.java  GeneratorTests.java  StructurePiecesTests.java
src/test/java/dev/xpple/cubiomes/: CarverTests.java  GeneratorTests.java  StructureLootTests.java  StructurePiecesTests.java
tables/: btree214.h  btree215.h  btree262.h
